Docs for Job routes
